KeycloackClientService: asList change List.of. and format.